--- a/views/admin/layouts/header_footer.ejs
+++ b/views/admin/layouts/header_footer.ejs
@@ -82,7 +82,7 @@
     <script src="/admin/js/components/stacked-bar-chart.js"></script>
     <script src="/admin/js/components/line-chart.js"></script>
     <script src="/admin/js/components/pie-chart.js"></script>
-         
+    <script src="/admin/js/components/horizontal-bar-chart-revenue-profit.js"></script>
 
           <script>
             // Example data, replace this with your actual data source
