--- a/views/admin/sales_dashboard.ejs
+++ b/views/admin/sales_dashboard.ejs
@@ -1176,7 +1176,7 @@ HTMLOpenTag/divHTMLCloseTag
                                         <div class="p-5">
                                             <div class="preview relative [&.hide]:overflow-hidden [&.hide]:h-0">
                                                 <div class="w-auto h-[400px]">
-                                                    <canvas class="chart horizontal-bar-chart"></canvas>
+                                                    <canvas class="chart horizontal-bar-chart-revenue-profit "></canvas>
                                                 </div>
                                             </div>
                                             <div class="source hide relative [&.hide]:overflow-hidden [&.hide]:h-0">
@@ -1185,12 +1185,12 @@ HTMLOpenTag/divHTMLCloseTag
                                                         Copy example code</button>
                                                     <div class="relative mt-3 overflow-hidden rounded-md">
                                                         <pre class="relative grid">            <code class="text-xs leading-relaxed [&.hljs]:bg-slate-50 [&.hljs]:px-5 [&.hljs]:py-4 [&.hljs]:dark:text-slate-200 [&.hljs]:dark:bg-darkmode-700 [&.hljs_.hljs-string]:dark:text-slate-200 [&.hljs_.hljs-tag]:dark:text-slate-200 [&.hljs_.hljs-name]:dark:text-emerald-500 [&.hljs_.hljs-attr]:dark:text-sky-500 before:content-['HTML'] before:font-roboto before:font-medium before:px-4 before:py-2 before:block before:absolute before:top-0 before:right-0 before:rounded-bl before:bg-slate-200 before:bg-opacity-70 before:dark:bg-darkmode-400 [&.javascript]:before:content-['JS'] html">
-                HTMLOpenTagdiv class="w-auto h-[400px]"HTMLCloseTag
-    HTMLOpenTagcanvas
-    class="chart horizontal-bar-chart horizontal-bar-chart"
-HTMLCloseTagHTMLOpenTag/canvasHTMLCloseTag
-HTMLOpenTag/divHTMLCloseTag
-            </code>
+                                                                        HTMLOpenTagdiv class="w-auto h-[400px]"HTMLCloseTag
+                                                            HTMLOpenTagcanvas
+                                                            class="chart horizontal-bar-chart horizontal-bar-chart"
+                                                        HTMLCloseTagHTMLOpenTag/canvasHTMLCloseTag
+                                                        HTMLOpenTag/divHTMLCloseTag
+                                                                    </code>
         </pre>
                                                     </div>
                                                 </div>
