--- a/views/admin/layouts/header_footer.ejs
+++ b/views/admin/layouts/header_footer.ejs
@@ -87,6 +87,8 @@
     <script src="/admin/js/components/pie-chart-orders-by-category.js"></script>
     <script src="/admin/js/components/line-chart-total-customers.js"></script>
     <script src="/admin/js/components/line-chart-revenue-per-customer.js"></script>
+    <script src="/admin/js/components/horizontal-bar-chart-revenue-by-category-detail.js"></script>
+    <script src="/admin/js/components/horizontal-bar-chart-orders-by-category-detail.js"></script>
 
           <script>
             // Example data, replace this with your actual data source
